<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/statistics">
        <SwitchPreference
            android:defaultValue="true"
            android:key="USE_STATISTICS"
            android:summary="@string/statistics_summary"
            android:title="@string/statistics_use" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/data_display">
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="USE_STATISTICS"
            android:key="STATISTICS_TODAY_ONLY"
            android:summary="@string/filter_by_today_summary"
            android:title="@string/statistics_today" />
    </PreferenceCategory>
</PreferenceScreen>
